# rda_robot_ws

./: .gitignore  README.md
docs/: 기구학-분석.md  실행명령어.txt  파트규약-비교.md
docs/crop_ref/: AIHUB_통계.md
docs/greenhouse_ref/: analyze_step.py  analyze_step2.py  dump_bboxes.py  map_names.py  plot_section.py
docs/scripts/: check_obstacles.py  gen_srdf.py  kinematics.py  measure_base.py  setup_vendor_models.sh  test_assembler_load.py  test_integrated_urdf.py  test_models.py  test_moveit_scene.py  torque_check.py
rda_robot_assembler/: README.md  package.xml  run.sh  setup.cfg  setup.py  test_assembly.py  test_loader.py
rda_robot_assembler/rda_robot_assembler/: __init__.py  app.py  assembly.py  collision.py  composer.py  mesh2urdf.py  part_registry.py  paths.py  urdf_loader.py
rda_robot_bringup/: CMakeLists.txt  package.xml
rda_robot_bringup/scripts/: crop_tuner.py  fruit_detector.py  gen_gazebo_world.py  obstacle_publisher.py  pregrasp_demo.py  pregrasp_pose.py  robot_introspect.py  self_collision_monitor.py
rda_robot_description/: CMakeLists.txt  package.xml
rda_robot_description/config/: gazebo_overlay.xml  mounts.yaml  obstacles.yaml
rda_robot_description/config/environments/: greenhouse.yaml
rda_robot_description/config/models/: README.md
rda_robot_description/config/models/arm/: EXAMPLE.yaml.example  rb10_1300e.yaml  uf850.yaml  ur10e.yaml  ur5e.yaml  xarm6.yaml
rda_robot_description/config/models/base/: box_base.urdf  box_base.yaml  dingo_d.xacro  dingo_d.yaml  dingo_o.xacro  dingo_o.yaml  husky.xacro  husky.yaml  jackal.xacro  jackal.yaml  rbkairos.yaml  rbsummit.yaml  rbtheron.yaml  rbvogui.yaml  ridgeback.xacro  ridgeback.yaml  turtlebot4.yaml
rda_robot_description/config/models/base/meshes/: box_base_collision.stl  box_base_visual.stl
rda_robot_description/config/models/endeffector/: allegro_hand_v5.yaml  franka_hand.yaml  onrobot_rg6.yaml  robotiq_2f_140.yaml  robotiq_2f_85.yaml
rda_robot_description/launch/: gazebo_sim.launch.py  rda_robot_display.launch.py
rda_robot_description/rviz/: rda_robot.rviz
rda_robot_description/urdf/: rda_robot.urdf.xacro
rda_robot_description/urdf/parts/endeffector/: onrobot_rg2_macro.xacro  onrobot_rg2_standalone.urdf.xacro
rda_robot_moveit_config/: CMakeLists.txt  package.xml
rda_robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  perception_demo.rviz  pregrasp_demo.rviz  rda_robot.srdf  sensors_3d.yaml
rda_robot_moveit_config/launch/: moveit_demo.launch.py  perception_demo.launch.py  pregrasp_demo.launch.py
rda_robot_msgs/: CMakeLists.txt  package.xml
