<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelang="RNG"?>
<package format="3">
  <name>rda_robot_assembler</name>
  <version>0.1.0</version>
  <description>RDA 로봇 어셈블러 — 파트를 불러와 3D로 보며 부착 프레임·거리·각도를
    맞추고 mounts.yaml 로 저장하는 인터랙티브 조립 GUI(→ rda_robot.urdf.xacro 반영).</description>
  <maintainer email="akswnddl255@gmail.com">kim</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rda_robot_description</exec_depend>
  <!-- pip 설치 필요(rosdep 밖): PyQt5, pyvista, pyvistaqt, trimesh, yourdfpy, pycollada, python-fcl(자충돌 검사)
       mesh2urdf 선택 의존: fast_simplification(--collision simplify), FreeCAD(apt, STEP/IGES 입력) -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
