<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rda_robot_moveit_config</name>
  <version>0.0.1</version>
  <description>RDA 통합 로봇 MoveIt2 설정 — 플래닝 그룹/ACM/장애물 planning scene (4주차)</description>
  <maintainer email="akswnddl255@gmail.com">kim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rda_robot_description</exec_depend>
  <exec_depend>rda_robot_bringup</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <!-- Stage 3(옥토맵): PointCloudOctomapUpdater 플러그인이 여기 들어 있다. -->
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
